# demucs-android

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/freemusicdemixer/pro/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  demucs_ndk.cpp
app/src/main/cpp/demucs/: encdec.cpp  model.hpp  model_apply.cpp  model_inference.cpp  model_load.cpp
app/src/main/cpp/libnyquist/src/: Common.cpp
app/src/main/java/com/github/sevagh/demucs_android/: CaptureDialogFragment.kt  CaptureForegroundService.kt  CustomMixDialogFragment.kt  DemixerFragment.kt  DemucsForegroundService.kt  MainActivity.kt  RecordDialogFragment.kt  SavedSettings.kt  SharedData.kt
app/src/main/res/drawable/: ic_foreground.xml  ic_record_discard.xml  ic_record_mic.xml  ic_record_play.xml  ic_record_stop.xml  progress_bar_recording.xml  rounded_spinner_background.xml
app/src/main/res/layout/: activity_main.xml  capture_dialog_fragment.xml  custom_mix_dialog_fragment.xml  demixer_fragment.xml  recording_dialog_fragment.xml  stem_item.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: colors.xml  ic_pro_background.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v23/: themes.xml
app/src/test/java/com/freemusicdemixer/pro/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
